# Pyner

./: .gitignore  AGENTS.md  CLAUDE.md  GENERALIZATION_PLAN.md  GITHUB_SETUP.md  LICENSE  README.md  README_ES.md  pyproject.toml  setup.py
docs/: DATABASES.md  PRISMA_CHECKLIST.md
examples/: basic_usage.py  complete_example.py
protocols/: search_protocol_template.md
pyner/: __init__.py  cli.py  config.py  core.py  domain_vocabularies.py  query_builder.py
pyner/fetchers/: __init__.py  bioproject_fetcher.py  geo_fetcher.py  ncbi_base.py  pubmed_fetcher.py  sra_fetcher.py
pyner/parsers/: __init__.py  bioproject_parser.py  geo_parser.py  pubmed_parser.py  sra_parser.py
pyner/prisma/: __init__.py  flow_diagram.py  quality_assessment.py  screening_log.py
pyner/utils/: __init__.py
